--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ button {
   color: white;
   border: 1px solid #ff6433;
   font-size: 18px;
+  cursor: pointer;
 }
 .container-4 {
   background: rgba(242, 242, 242, 1);
@@ -108,6 +109,9 @@ button {
   border-right: 7px solid rgba(242, 242, 242, 1);
   border-bottom: 3px solid rgba(242, 242, 242, 1);
 }
+.container-box img:hover {
+  transform: scale(1.2);
+}
 .end-note {
   display: flex;
   margin-top: 25px;
@@ -118,6 +122,9 @@ button {
   margin-right: 20px;
   font-size: 18px;
   font-weight: 600;
+}
+.end-note img:hover{
+  transform: scale(1.1);
 }
 #cta {
   background: #f2f2f2;
@@ -154,6 +161,16 @@ button {
   line-height: 67px;
   padding: 50px;
   margin-top: 10rem;
+}
+.get-in input[type="submit"]{
+  background-color: black;
+  color: #f2f2f2;
+  padding: 16px 40px;
+  border-radius: 15px;
+  font-size: 18px;
+  margin-left: 50px;
+  border: none;
+  cursor: pointer;
 }
 .experience {
   display: flex;
