--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ button {
   font-size: 18px;
   font-weight: 600;
 }
-.end-note img:hover{
+.end-note img:hover {
   transform: scale(1.1);
 }
 #cta {
@@ -137,13 +137,13 @@ button {
   width: 100%;
 }
 .img-1 {
-  background: url(/images/car.png);
+  background: url(./images/car.png);
   background-size: cover;
   min-height: 50vh;
   width: 28%;
 }
 .img-2 {
-  background: url(/images/red-black.png);
+  background: url(./images/red-black.png);
   background-size: cover;
   min-height: 50vh;
   width: 70%;
@@ -162,7 +162,7 @@ button {
   padding: 50px;
   margin-top: 10rem;
 }
-.get-in input[type="submit"]{
+.get-in input[type="submit"] {
   background-color: black;
   color: #f2f2f2;
   padding: 16px 40px;
