--- a/css/styles.css
+++ b/css/styles.css
@@ -137,13 +137,13 @@ button {
   width: 100%;
 }
 .img-1 {
-  background: url(./images/car.png);
+  background: url(https://i.postimg.cc/62tfFkDQ/car.png);
   background-size: cover;
   min-height: 50vh;
   width: 28%;
 }
 .img-2 {
-  background: url(./images/red-black.png);
+  background: url(https://i.postimg.cc/87vdckG5/red-black.png);
   background-size: cover;
   min-height: 50vh;
   width: 70%;
