--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,6 @@ button {
 .get-in {
   background: url(https://i.postimg.cc/D0Ty2S2H/BG.png);
   background-size: cover;
-  position: relative;
   min-height: 50vh;
   width: 30%;
 }
@@ -159,16 +158,14 @@ button {
   font-size: 82px;
   color: rgba(255, 255, 255, 1);
   font-weight: 700;
-  line-height: 140%;
+  line-height: 70px;
   padding: 50px;
   margin-top: 10rem;
-  position: relative;
-  letter-spacing: -0.03em;
 }
 .get-in input[type="submit"] {
   background-color: black;
   color: #f2f2f2;
-  padding: 25px 40px;
+  padding: 16px 40px;
   border-radius: 15px;
   margin-top: 5em;
   font-size: 18px;
