--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,20 @@
 @import url(https://fonts.googleapis.com/css?family=Manrope);
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: "Manrope";
 }
+
 #process-section {
   padding: 50px;
   min-height: 30vh;
 }
+
 .container-3 {
   display: flex;
   justify-content: space-between;
@@ -21,29 +25,35 @@ body {
   padding-bottom: 50px;
   margin-bottom: 50px;
 }
+
 .process-left {
   width: 40%;
   padding-top: 50px;
 }
+
 .left-text h2 {
   font-size: 55px;
   line-height: 76px;
   margin-top: 20%;
 }
+
 .left-text p {
   font-weight: 600;
   font-size: 16px;
   line-height: 28px;
   opacity: 0.6;
 }
+
 .process-right {
   width: 50%;
   padding-top: 80px;
 }
+
 .right-3 {
   display: flex;
   margin-top: 20px;
 }
+
 .note h3 {
   margin-left: 20px;
   margin-top: 10px;
@@ -51,6 +61,7 @@ body {
   font-size: 32px;
   line-height: 48px;
 }
+
 .note p {
   margin-top: 20px;
   border-left: 2px dashed #ff6433;
@@ -61,12 +72,15 @@ body {
   font-weight: 600;
   opacity: 0.6;
 }
+
 #para-3 {
   border: none;
 }
+
 .image-box {
   margin-left: 10px;
 }
+
 button {
   background: #ff6433;
   border-radius: 12px;
@@ -77,6 +91,7 @@ button {
   font-size: 18px;
   cursor: pointer;
 }
+
 .container-4 {
   background: rgba(242, 242, 242, 1);
   background-size: cover;
@@ -84,20 +99,24 @@ button {
   min-height: 50vh;
   padding: 80px 0;
 }
+
 .top-text {
   text-align: center;
   margin-top: 50px;
 }
+
 .top-text h2 {
   font-size: 58px;
   line-height: 76px;
   font-weight: 800;
 }
+
 .top-text p {
   font-size: 24px;
   line-height: 36px;
   font-weight: 600;
 }
+
 .container-box {
   display: flex;
   justify-content: center;
@@ -105,63 +124,76 @@ button {
   align-content: center;
   padding-top: 30px;
 }
+
 .container-box img {
   border-right: 7px solid rgba(242, 242, 242, 1);
   border-bottom: 3px solid rgba(242, 242, 242, 1);
 }
+
 .container-box img:hover {
   transform: scale(1.2);
 }
+
 .end-note {
   display: flex;
   margin-top: 25px;
   justify-content: flex-end;
   margin-right: 43rem;
 }
+
 .end-note p {
   margin-right: 20px;
   font-size: 18px;
   font-weight: 600;
 }
+
 .end-note img:hover {
   transform: scale(1.1);
 }
+
 #cta {
   background: #f2f2f2;
   padding-bottom: 50px;
 }
+
 .photo-set {
   min-height: 50vh;
   display: flex;
   align-items: center;
   width: 100%;
 }
+
 .img-1 {
   background: url(https://i.postimg.cc/Pqt0zGL7/car.png);
   background-size: cover;
   min-height: 50vh;
   width: 28%;
 }
+
 .img-2 {
   background: url(https://i.postimg.cc/GtBW8kBh/red-black.png);
   background-size: cover;
   min-height: 50vh;
   width: 60%;
 }
+
 .get-in {
   background: url(https://i.postimg.cc/D0Ty2S2H/BG.png);
   background-size: cover;
   min-height: 50vh;
   width: 30%;
+  background-position: absolute;
 }
+
 .get-in p {
   font-size: 48px;
   color: rgba(255, 255, 255, 1);
   font-weight: 700;
-  line-height: 70px;
-  padding: 50px;
+  line-height: 50px;
+  padding: 30px;
   margin-top: 7rem;
 }
+
 .get-in input[type="submit"] {
   background-color: black;
   color: #f2f2f2;
@@ -173,30 +205,36 @@ button {
   border: none;
   cursor: pointer;
 }
+
 .experience {
   display: flex;
   justify-content: space-between;
   margin-top: 40px;
   margin-right: 80px;
 }
+
 .experience h3 {
   font-size: 58px;
   font-weight: 800;
   line-height: 76px;
   color: #661ce7;
 }
+
 .experience p {
   font-size: 24px;
   font-weight: 600;
   line-height: 36px;
   opacity: 0.7;
 }
+
 #first {
   margin-left: 300px;
 }
+
 #last {
   margin-right: 100px;
 }
+
 .container-5 {
   align-content: center;
   justify-content: center;
@@ -204,6 +242,7 @@ button {
   min-height: 35vh;
   margin: 50px;
 }
+
 .container-5 h2 {
   text-align: center;
   margin-bottom: 30px;
