--- a/css/styles.css
+++ b/css/styles.css
@@ -190,8 +190,9 @@ button {
   color: rgba(255, 255, 255, 1);
   font-weight: 700;
   line-height: 50px;
-  padding: 50px;
-  margin-top: 7rem;
+  padding-top: 20px;
+  padding-left: 50px;
+  margin-top: 5rem;
 }
 
 .get-in input[type="submit"] {
@@ -199,7 +200,7 @@ button {
   color: #f2f2f2;
   padding: 16px 40px;
   border-radius: 15px;
-  margin-top: 3em;
+  margin-top: 2em;
   font-size: 18px;
   margin-left: 50px;
   border: none;
