--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,218 @@
 @import url(https://fonts.googleapis.com/css?family=Manrope);
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: "Manrope";
-  max-width: 98%;
+}
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 5px;
+}
+.right-section {
+  display: flex;
+  align-items: center;
+}
+.right-section ul {
+  list-style: none;
+  display: flex;
+}
+
+.right-section ul li {
+  margin-right: 20px;
+}
+
+.road-assistance {
+  display: flex;
+  padding-left: 20px;
+}
+
+.road-assistance .icon {
+  margin-right: 10px;
+}
+
+.right-section ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+.right-section .navigation {
+  border-right: 2px solid grey;
+}
+.flex {
+  display: flex;
+}
+#hero-section .text-section {
+  width: 40%;
+}
+
+#hero-section .image-section {
+  width: 60%;
+  min-height: 60vh;
+}
+#hero-section,
+#quote-section {
+  padding: 80px 0;
+  min-height: 70vh;
+}
+.image-section {
+  min-height: 68vh;
+}
+.text-section h1 {
+  font-size: 64px;
+}
+.time-section {
+  margin-top: 30px;
+  align-items: center;
+}
+.time-section .image-box {
+  width: 5%;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.time-section .time-text {
+  width: 95%;
+}
+
+.light-grey {
+  color: rgba(147, 145, 145, 1);
+}
+
+#quote-section {
+  background: #e2e6e9;
+  min-height: 60vh;
+}
+
+#quote-section .left-section,
+#quote-section .right-form-section {
+  width: 45%;
+}
+#quote-section .container{
+  padding: 50px 0;
+}
+#quote-section ul {
+  list-style: none;
+}
+#quote-section ul li {
+  margin-bottom: 30px;
+}
+#quote-section .left-section h2 {
+  margin-bottom: 40px;
+}
+
+#quote-section .left-section .image-box {
+  width: 5%;
+  margin-right: 10px;
+}
+
+#quote-section .left-section .image-box img {
+  width: 100%;
+}
+
+#quote-section .left-section .text-box {
+  width: 50%;
+}
+.left-section h2 {
+  font-size: 58px;
+  font-weight: 800;
+  line-height: 76px;
+}
+.text-box h5 {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.text-box p {
+  font-size: 16px;
+  font-weight: 600;
+  opacity: 0.6;
+}
+.text-box a {
+  font-size: 18px;
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+  line-height: 31.5px;
+}
+#quote-section .right-form-section {
+  margin: 0 auto;
+}
+#quote-section .right-form-section h3 {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 67.2px;
+  margin-bottom: 30px;
+}
+#quote-section .right-form-section input {
+  width: 100%;
+  padding: 15px;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  border-radius: 2px;
+  margin-bottom: 10px;
+  opacity: 0.5;
+}
+#quote-section .right-form-section input:hover {
+  border: 2px solid blue;
 }
 #process-section {
   padding: 50px;
   min-height: 30vh;
 }
+
 .container-3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 80%;
   min-height: 50vh;
-  margin-left: 50px;
+  margin: 0 auto;
   padding-bottom: 50px;
-  margin-bottom: 50px;
 }
+
 .process-left {
   width: 40%;
   padding-top: 50px;
 }
+
 .left-text h2 {
   font-size: 55px;
   line-height: 76px;
   margin-top: 20%;
 }
+
 .left-text p {
   font-weight: 600;
   font-size: 16px;
   line-height: 28px;
   opacity: 0.6;
 }
+
 .process-right {
   width: 50%;
   padding-top: 80px;
 }
+
 .right-3 {
   display: flex;
   margin-top: 20px;
 }
+
 .note h3 {
   margin-left: 20px;
   margin-top: 10px;
@@ -52,6 +220,7 @@ body {
   font-size: 32px;
   line-height: 48px;
 }
+
 .note p {
   margin-top: 20px;
   border-left: 2px dashed #ff6433;
@@ -62,12 +231,15 @@ body {
   font-weight: 600;
   opacity: 0.6;
 }
+
 #para-3 {
   border: none;
 }
+
 .image-box {
   margin-left: 10px;
 }
+
 button {
   background: #ff6433;
   border-radius: 12px;
@@ -78,6 +250,7 @@ button {
   font-size: 18px;
   cursor: pointer;
 }
+
 .container-4 {
   background: rgba(242, 242, 242, 1);
   background-size: cover;
@@ -85,20 +258,24 @@ button {
   min-height: 50vh;
   padding: 80px 0;
 }
+
 .top-text {
   text-align: center;
   margin-top: 50px;
 }
+
 .top-text h2 {
   font-size: 58px;
   line-height: 76px;
   font-weight: 800;
 }
+
 .top-text p {
   font-size: 24px;
   line-height: 36px;
   font-weight: 600;
 }
+
 .container-box {
   display: flex;
   justify-content: center;
@@ -106,97 +283,118 @@ button {
   align-content: center;
   padding-top: 30px;
 }
+
 .container-box img {
   border-right: 7px solid rgba(242, 242, 242, 1);
   border-bottom: 3px solid rgba(242, 242, 242, 1);
 }
+
 .container-box img:hover {
   transform: scale(1.2);
 }
+
 .end-note {
   display: flex;
   margin-top: 25px;
   justify-content: flex-end;
   margin-right: 43rem;
 }
+
 .end-note p {
   margin-right: 20px;
   font-size: 18px;
   font-weight: 600;
 }
+
 .end-note img:hover {
   transform: scale(1.1);
 }
+
 #cta {
   background: #f2f2f2;
   padding-bottom: 50px;
 }
+
 .photo-set {
-  min-height: 50vh;
+  height: 50vh;
   display: flex;
   align-items: center;
   width: 100%;
 }
+
 .img-1 {
   background: url(https://i.postimg.cc/Pqt0zGL7/car.png);
   background-size: cover;
-  min-height: 50vh;
-  width: 28%;
+  height: 50vh;
+  width: 25%;
 }
+
 .img-2 {
   background: url(https://i.postimg.cc/GtBW8kBh/red-black.png);
   background-size: cover;
-  min-height: 50vh;
-  width: 70%;
+  height: 50vh;
+  width: 35%;
 }
+
 .get-in {
-  background: #ff6433;
+  background: url(https://i.postimg.cc/D0Ty2S2H/BG.png);
   background-size: cover;
-  min-height: 50vh;
-  width: 57%;
+  height: 50vh;
+  width: 40%;
+  background-position: absolute;
 }
+
 .get-in p {
   font-size: 48px;
   color: rgba(255, 255, 255, 1);
   font-weight: 700;
-  line-height: 67px;
-  padding: 50px;
-  margin-top: 10rem;
+  line-height: 50px;
+  padding-top: 20px;
+  padding-left: 50px;
+  margin-top: 5rem;
 }
+
 .get-in input[type="submit"] {
   background-color: black;
   color: #f2f2f2;
   padding: 16px 40px;
   border-radius: 15px;
+  margin-top: 2em;
   font-size: 18px;
   margin-left: 50px;
   border: none;
   cursor: pointer;
 }
+
 .experience {
   display: flex;
   justify-content: space-between;
   margin-top: 40px;
   margin-right: 80px;
 }
+
 .experience h3 {
   font-size: 58px;
   font-weight: 800;
   line-height: 76px;
   color: #661ce7;
 }
+
 .experience p {
   font-size: 24px;
   font-weight: 600;
   line-height: 36px;
   opacity: 0.7;
 }
+
 #first {
   margin-left: 300px;
 }
+
 #last {
   margin-right: 100px;
 }
+
 .container-5 {
   align-content: center;
   justify-content: center;
@@ -204,10 +402,230 @@ button {
   min-height: 35vh;
   margin: 50px;
 }
+
 .container-5 h2 {
   text-align: center;
   margin-bottom: 30px;
   font-size: 48px;
   font-weight: 700;
   line-height: 67.2px;
+}
+#testimonials-section {
+  background: #f2f2f2;
+  mix-blend-mode: multiply;
+  width: 100%;
+  min-height: 80vh;
+}
+#testimonials-section .heading {
+  padding: 80px 0;
+  width: 80%;
+  margin: 0 auto;
+}
+#testimonials-section .heading h2 {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 67.2px;
+  text-align: center;
+}
+#testimonials-section .container-6 {
+  display: flex;
+}
+#testimonials-section .left-section {
+  background-color: white;
+  box-sizing: border-box;
+  background-size: cover;
+  border-radius: 6px;
+  border: 1px solid rgba(172, 172, 172, 0.29);
+  height: 40vh;
+  padding: 40px;
+  width: 30%;
+  margin-left: 300px;
+  padding: 70px;
+}
+#testimonials-section .left-section .comment {
+  display: flex;
+}
+.left-section .comment .image-box {
+  margin-right: 10px;
+}
+.left-section .comment .text-box h5 {
+  margin-bottom: 2px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 36px;
+}
+.left-section .comment .text-box p {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 28px;
+  color: #939191;
+}
+.left-section .comment-text p {
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: 600;
+}
+#testimonials-section .right-comment-section {
+  background-color: white;
+  box-sizing: border-box;
+  background-size: cover;
+  border-radius: 6px;
+  border: 1px solid rgba(172, 172, 172, 0.29);
+  height: 40vh;
+  padding: 40px;
+  width: 30%;
+  margin-right: 70px;
+  margin-left: 120px;
+  padding: 70px;
+}
+#testimonials-section .right-comment-section .comment {
+  display: flex;
+}
+.right-comment-section .comment .image-box {
+  margin-right: 10px;
+}
+.right-comment-section .comment .text-box h5 {
+  margin-bottom: 2px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 36px;
+}
+.right-comment-section .comment .text-box p {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 28px;
+  color: #939191;
+}
+.right-comment-section .comment-text p {
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: 600;
+}
+.big-container {
+  width: 80%;
+  margin: 0 auto;
+}
+.big-container .ending {
+  display: flex;
+  align-content: flex-end;
+  justify-content: right;
+  margin-right: 400px;
+  margin-top: 20px;
+}
+.big-container .lines {
+  text-align: center;
+  margin-top: 10px;
+}
+#faq{
+  background: rgba(226, 230, 233, 1);
+  min-height: 95vh;
+}
+#faq .container-7{
+  width: 40%;
+  margin: 0 auto;
+}
+#faq h1{
+  text-align: center;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 67.2px;
+  padding: 80px 80px;
+}
+#faq .q-1 {
+  background: white;
+  padding: 50px;
+}
+#faq .q-2{
+  background: white;
+  padding: 35px;
+  margin-top: 20px;
+}
+#faq .q-1 .question {
+  display: flex;
+  justify-content: space-between;
+}
+#faq .q-2 .question {
+  display: flex;
+  justify-content: space-between;
+}
+.q-1 .para{
+  width: 80%;
+}
+.q-1 .para p{
+  color: #939191;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 32px;
+}
+
+#faq h3{
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 36px;
+}
+#footer{
+  width: 100%;
+}
+#footer .top-container{
+  background: black;
+  opacity: 0.95;
+  width: 100%;
+}
+#footer .top-container .container-8{
+  display: flex;
+  justify-content: space-between;
+  padding: 100px;
+  width: 70%;
+  margin: auto;
+}
+#footer .container-8 .lt h3{
+  font-size: 72px;
+  font-weight: 700;
+  line-height: 67.2px;
+  color: white;
+  margin-bottom: 100px;
+  letter-spacing: -0.03em
+}
+.container-8 .lt img{
+  text-decoration: none;
+  width: 50%;
+}
+.container-8 .rt h5{
+  font-size: 18px;
+  line-height: 32px;
+  color: white;
+  opacity: 0.6;
+  margin-bottom: 20px;
+}
+.container-8 .rt p{
+  font-size: 24px;
+  color: white;
+  line-height: 36px;
+  margin-bottom: 50px;
+}
+#footer .bottom-container{
+  background: black;
+  display: flex;
+  justify-content: space-between;
+  min-height: 15vh;
+  padding-left: 500px;
+  padding-right: 500px;
+  align-items: center;
+}
+#footer .bottom-container p{
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  color: #939191;
+}
+#footer .bottom-container a{
+  text-decoration: none;
+  font-size: 20px;
+  line-height: 28px;
+  color: white;
+  margin-right: 40px;
+}
+#footer .bottom-container ul{
+  display: flex;
+  list-style: none;
 }
