--- a/css/styles.css
+++ b/css/styles.css
@@ -406,9 +406,7 @@ button {
   align-content: center;
   justify-content: center;
   display: flex;
-  /* min-height: 35vh; */
   margin: 50px;
-  /* margin-bottom: 0; */
 }
 
 .container-5 h2 {
@@ -613,8 +611,6 @@ button {
   display: flex;
   justify-content: space-between;
   min-height: 15vh;
-  padding-left: 500px;
-  padding-right: 500px;
   align-items: center;
 }
 #footer .bottom-container p{
@@ -634,7 +630,7 @@ button {
   display: flex;
   list-style: none;
 }
-/* screen and (min-width: 320px) and  */
+
 @media (max-width: 426px) {
   .main-header{
     flex-direction: column;
@@ -705,7 +701,7 @@ button {
     padding-bottom: 20px;
   }
   #quote-section .left-section h2{
-    font-size: 30px;
+    font-size: 25px;
     line-height: normal;
     padding-top: 10px;
     margin-bottom: 10px;
@@ -734,7 +730,7 @@ button {
     width: 100%;
   }
   #quote-section .right-form-section h3{
-    font-size: 30px;
+    font-size: 25px;
     line-height: normal;
     margin-bottom: 10px;
   }
@@ -772,7 +768,7 @@ button {
   }
   #process-section .process-left h2{
     margin-top: 10px;
-    font-size: 35px;
+    font-size: 25px;
     line-height: normal;
   }
   #process-section .process-left button{
@@ -991,8 +987,9 @@ button {
     justify-content: end;
   }
   #faq h1{
-    font-size: 35px;
+    font-size: 28px;
     line-height: normal;
+    padding: 10px;
   }
   #faq .container-7{
     width: 90%;
@@ -1002,10 +999,10 @@ button {
     padding-right: 0;
   }
   #faq .container-7 .q-1 h3{
-    font-size: 18px;
+    font-size: 15px;
   }
   #faq .container-7 .q-1 p{
-    font-size: 13px;
+    font-size: 10px;
     line-height: normal
   }
   #faq .container-7 .q-1 .question img{
@@ -1016,14 +1013,14 @@ button {
     padding-right: 0;
   }
   #faq .container-7 .q-2 h3{
-    font-size: 18px;
+    font-size: 15px;
     line-height: normal;
   }
   #faq .container-7 .q-2 .question img{
     width: 60%;
   }
   #footer .top-container{
-    opacity: 0.85;
+    opacity: 0.9;
   }
   #footer .top-container .container-8{
     flex-direction: column;
@@ -1057,7 +1054,7 @@ button {
     align-items: center;
   }
   #footer .bottom-container .links ul a{
-    font-size: 11px;
+    font-size: 10px;
     line-height: normal;
   }
   #footer .bottom-container .links{
